--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<!--|Meta Config.|-->
 	<meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-	<meta name="description" content="APAV">
+	<meta name="keywords" content="Associação Projeto Alcançando Vidas,APAV,Projeto Alcançando Vidas,Projeto social cristão,Ministério cristão social,Ação social cristã,Projeto missionário,Projeto evangelístico,Evangelização e ação social,Ministério para alcançar vidas, Ajuda a famílias carentes, Trabalho social cristão, Projeto de apoio a pessoas, Doações para projetos cristãos, Missões urbanas, Projeto comunitário cristão, Trabalho voluntário cristão, Projeto solidário em nome de Jesus, Ministério de compaixão, Projeto de restauração de vidas, Em nome de Jesus, Amor ao próximo, Evangelho na prática, Ação social com fé, Servindo a Deus servindo pessoas, Propósito de Deus, Transformação de vidas em Cristo, Alcançando vidas para Jesus">
+	<meta name="description" content="O “Projeto Alcançando Vidas” é uma instituição cristã dedicada a acolher pessoas em situação de vulnerabilidade, promovendo reinserção social, apoio humanitário e tratamento para dependentes químicos. Atuamos levando cuidado, alimento, esperança e o amor de Jesus a diversos povos: moradores de rua, comunidades indígenas, famílias ciganas, sertanejos do Nordeste que vivem em regiões áridas, dependentes químicos, famílias carentes e todos aqueles que enfrentam abandono, fome ou sofrimento. Nosso propósito é alcançar vidas, restaurar histórias e transformar corações por meio do Evangelho e da compaixão e amor de Jesus.">
 	<meta name="author" content="Unilatem">
 	<link rel="shortcut icon" href="assets/images/logo/favicon.ico">
 	<title>APAV</title>
@@ -40,11 +40,10 @@
 				<div class="carousel-container">
 					<button class="nav-arrow left">‹</button>
 					<div class="carousel-track">
-						<div class="card" data-index="0"><img src="/assets/images/missoes/Capacitacao.jpeg" alt="Member 1"></div>
-						<div class="card" data-index="1"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 2"></div>
-						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="0"><img src="/assets/images/missoes/APAV.jpeg" alt="Member 1"></div>
 						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpeg" alt="Member 2"></div>
-						<!-- <div class="card" data-index="4"><img src="/assets/images/missoes/agap.jpeg" alt="Member 5"></div> -->
+						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="3"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 4"></div>
 					</div>
 					<button class="nav-arrow right">›</button>
 				</div>
