--- a/pages/EN/en.html
+++ b/pages/EN/en.html
@@ -4,8 +4,8 @@
 <head>
 	<!--|Meta Config.|-->
 	<meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-	<meta name="description" content="APAV">
+	<meta name="keywords" content="Reaching Lives Project Association, APAV, Reaching Lives Project, Christian social project, Christian social ministry, Christian social action, Missionary project, Evangelistic project, Evangelism and social action, Ministry to reach lives, Help for needy families, Christian social work, Support project for people, Donations for Christian projects, Urban missions, Christian community project, Christian volunteer work, Solidarity project in Jesus' name, Ministry of compassion, Life restoration project, In Jesus' name, Love your neighbor, Gospel in practice, Social action with faith, Serving God by serving people, God's purpose, Life transformation in Christ, Reaching lives for Jesus">
+	<meta name="description" content="The 'Reaching Lives Project' is a Christian institution dedicated to welcoming people in vulnerable situations, promoting social reintegration, humanitarian support, and treatment for people struggling with chemical dependency. We work by bringing care, food, hope, and the love of Jesus to various groups: homeless individuals, indigenous communities, gypsy families, Northeastern sertanejo families living in arid regions, people with addictions, needy families, and all those facing abandonment, hunger, or suffering. Our purpose is to reach lives, restore stories, and transform hearts through the Gospel and the compassion and love of Jesus.">
 	<meta name="author" content="Unilatem">
 	<link rel="shortcut icon" href="../../assets/images/logo/favicon.ico">
 	<title>APAV</title>
@@ -40,11 +40,10 @@
 				<div class="carousel-container">
 					<button class="nav-arrow left">‹</button>
 					<div class="carousel-track">
-						<div class="card" data-index="0"><img src="/assets/images/missoes/Capacitacao.jpeg" alt="Member 1"></div>
-						<div class="card" data-index="1"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 2"></div>
-						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="0"><img src="/assets/images/missoes/APAV.jpeg" alt="Member 1"></div>
 						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpeg" alt="Member 2"></div>
-						<!-- <div class="card" data-index="4"><img src="/assets/images/missoes/agap.jpeg" alt="Member 5"></div> -->
+						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="3"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 4"></div>
 					</div>
 					<button class="nav-arrow right">›</button>
 				</div>
