--- a/pages/ES/es.html
+++ b/pages/ES/es.html
@@ -4,8 +4,8 @@
 <head>
 	<!--|Meta Config.|-->
 	<meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-	<meta name="description" content="APAV">
+	<meta name="keywords" content="Asociación Proyecto Alcanzando Vidas, APAV, Proyecto Alcanzando Vidas, Proyecto social cristiano, Ministerio social cristiano, Acción social cristiana, Proyecto misionero, Proyecto evangelístico, Evangelización y acción social, Ministerio para alcanzar vidas, Ayuda a familias necesitadas, Trabajo social cristiano, Proyecto de apoyo a personas, Donaciones para proyectos cristianos, Misiones urbanas, Proyecto comunitario cristiano, Trabajo voluntario cristiano, Proyecto solidario en el nombre de Jesús, Ministerio de compasión, Proyecto de restauración de vidas, En el nombre de Jesús, Amor al prójimo, Evangelio en práctica, Acción social con fe, Sirviendo a Dios sirviendo a las personas, Propósito de Dios, Transformación de vidas en Cristo, Alcanzando vidas para Jesús">
+	<meta name="description" content="El 'Proyecto Alcanzando Vidas' es una institución cristiana dedicada a acoger a personas en situación de vulnerabilidad, promoviendo la reinserción social, el apoyo humanitario y el tratamiento para dependientes químicos. Actuamos llevando cuidado, alimento, esperanza y el amor de Jesús a diversos pueblos: personas sin hogar, comunidades indígenas, familias gitanas, familias del sertão del Nordeste que viven en regiones áridas, personas con adicciones, familias necesitadas y todos aquellos que enfrentan abandono, hambre o sufrimiento. Nuestro propósito es alcanzar vidas, restaurar historias y transformar corazones a través del Evangelio y de la compasión y el amor de Jesús.">
 	<meta name="author" content="Unilatem">
 	<link rel="shortcut icon" href="../../assets/images/logo/favicon.ico">
 	<title>APAV</title>
@@ -41,11 +41,10 @@
 				<div class="carousel-container">
 					<button class="nav-arrow left">‹</button>
 					<div class="carousel-track">
-						<div class="card" data-index="0"><img src="/assets/images/missoes/Capacitacao.jpeg" alt="Member 1"></div>
-						<div class="card" data-index="1"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 2"></div>
-						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="0"><img src="/assets/images/missoes/APAV.jpeg" alt="Member 1"></div>
 						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpeg" alt="Member 2"></div>
-						<!-- <div class="card" data-index="4"><img src="/assets/images/missoes/agap.jpeg" alt="Member 5"></div> -->
+						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="3"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 4"></div>
 					</div>
 					<button class="nav-arrow right">›</button>
 				</div>
