--- a/pages/ES/es.html
+++ b/pages/ES/es.html
@@ -13,7 +13,7 @@
 
 	<!--|Import|-->
 	<link rel="stylesheet" href="../../assets/css/style.css">
-	<script rel="text/javascript" src="../../assets/js/script.js"></script>
+	<script type="module" src="../../assets/js/script.js"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>document.addEventListener("DOMContentLoaded", function () { AOS.init(); /*Inicializa o AOS quando o DOM estiver completamente carregado se não estiver funcionando só o aos use o DOM*/ });</script>
@@ -42,9 +42,9 @@
 					<button class="nav-arrow left">‹</button>
 					<div class="carousel-track">
 						<div class="card" data-index="0"><img src="/assets/images/missoes/APAV.jpeg" alt="Member 1"></div>
-						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpeg" alt="Member 2"></div>
-						<div class="card" data-index="2"><img src="/assets/images/missoes/rifa.jpeg" alt="Member 3"></div>
-						<div class="card" data-index="3"><img src="/assets/images/missoes/sertao.jpeg" alt="Member 4"></div>
+						<div class="card" data-index="1"><img src="/assets/images/missoes/APAV1.jpeg" alt="Member 2"></div>
+						<div class="card" data-index="2"><img src="/assets/images/missoes/APAV.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="3"><img src="/assets/images/missoes/APAV1.jpeg" alt="Member 4"></div>
 					</div>
 					<button class="nav-arrow right">›</button>
 				</div>
